# Fennec

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  integration_test.rs  test_cline_standalone.rs
.claude/: settings.local.json
.claude/marketplace/.claude-plugin/: marketplace.json
.claude/rust-best-practices-plugin/.claude-plugin/: plugin.json
.claude/rust-best-practices-plugin/skills/rust-best-practices/: SKILL.md
.github/workflows/: ci.yml  integration-tests.yml
benches/: performance.rs
config/: example.toml
crates/fennec-cli/: Cargo.toml
crates/fennec-cli/src/: main.rs
crates/fennec-commands/: Cargo.toml
crates/fennec-commands/src/: action_log.rs  commit_template.rs  common.rs  compiler_errors.rs  create.rs  delete.rs  dependency_graph.rs  diff.rs  edit.rs  error.rs  file_ops.rs  find_symbol.rs  fix_errors.rs  git_integration.rs  history.rs  hunks.rs  index.rs  lib.rs  plan.rs  pr_summary.rs  project_index.rs  quick_actions.rs  redo.rs  registry.rs  rename.rs  run.rs  search.rs  summarize.rs  summarize_enhanced.rs  symbols.rs  test_watch.rs  undo.rs
crates/fennec-commands/src/tests/: mod.rs  summarize_enhanced_tests.rs
crates/fennec-commands/tests/: integration_tests.rs
crates/fennec-core/: Cargo.toml
crates/fennec-core/src/: command.rs  config.rs  error.rs  lib.rs  provider.rs  session.rs  transcript.rs
crates/fennec-memory/: Cargo.toml  README.md
crates/fennec-memory/src/: agents.rs  cline_files.rs  context.rs  files.rs  integration.rs  lib.rs  notes.rs  plans.rs  service.rs  transcript.rs
crates/fennec-memory/tests/: cline_integration_test.rs
crates/fennec-orchestration/: Cargo.toml
crates/fennec-orchestration/src/: coordinator.rs  execution.rs  lib.rs  router.rs  session.rs
crates/fennec-provider/: Cargo.toml
crates/fennec-provider/src/: client.rs  error.rs  integration_test.rs  lib.rs  mock.rs  models.rs  openai.rs  streaming.rs
crates/fennec-security/: Cargo.toml
crates/fennec-security/src/: approval.rs  audit.rs  audit_integration.rs  command_integration.rs  lib.rs  sandbox.rs
crates/fennec-telemetry/: Cargo.toml  README.md
crates/fennec-telemetry/examples/: basic_usage.rs
crates/fennec-telemetry/src/: config.rs  correlation.rs  filters.rs  formatters.rs  lib.rs  metrics.rs  retention.rs  rotation.rs  sanitization.rs  system.rs  tests.rs
crates/fennec-tui/: Cargo.toml
crates/fennec-tui/src/: app.rs  components.rs  error.rs  events.rs  file_tree.rs  layout.rs  lib.rs  summary_panel.rs  theme.rs
docs/: API_REFERENCE.md  CLAUDE_CODE_COMPARISON.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MVP.md  PHASE2_ROADMAP.md  PHASE3_ROADMAP.md  README.md  TESTING_STRATEGY.md  TUTORIALS.md  USAGE_GUIDE.md  c4-1-context.md  c4-2-containers.md  c4-3-components.md  c4-4-code.md  claude_code_featurelist.md  cline_memory_bank.md  codex_featurelist.md  integration-testing.md
examples/: audit_demo.rs  cline_memory_demo.rs  memory_service_demo.rs  provider_demo.rs
memory_bank/: README.md  crate_structure.md  development_workflow.md  memory_system.md  project_overview.md  provider_architecture.md  recent_changes.md  security_model.md  tui_architecture.md
scripts/: smoke.sh
tests/: integration_test.rs  lib.rs
tests/integration/: command_execution.rs  common.rs  end_to_end_workflow.rs  fixtures.rs  mod.rs  performance_load.rs  provider_mocking.rs  sandbox_security.rs  tui_integration.rs
