[package]
name = "fennec-commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command implementations for Fennec"

[dependencies]
fennec-core = { path = "../fennec-core" }
fennec-security = { path = "../fennec-security" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
walkdir.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true