[package]
name = "fennec-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain logic and types for Fennec"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
directories.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true