[package]
name = "fennec-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory management and persistence for Fennec"

[dependencies]
fennec-core = { path = "../fennec-core" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
directories.workspace = true
toml.workspace = true
chrono.workspace = true
notify.workspace = true
fuzzy-matcher.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true